# sniff-cli

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
docs/: agents.md  architecture.md  cheatsheet.md  contributing.md  examples-by-language.md  getting-started.md  index.md  real-world-examples.md  spec.md  worktree.md  wrapper.md
examples/: .sniff-cli.toml.minimal  README.md
examples/real-world/: README.md  apxm.dekk.toml  carts.dekk.toml
src/dekk/: __init__.py  __main__.py  _compat.py  activation.py  build.py  ci.py  cli_commands.py  commands.py  config.py  context.py  dekk_os.py  deps.py  detect.py  diagnostic.py  diagnostic_checks.py  env.py  envspec.py  install.py  libpath.py  lockfile.py  remediate.py  runner.py  scaffold.py  setup.py  shell.py  test_runner.py  toolchain.py  typer_app.py  validate.py  validation_cache.py  version.py  version_managers.py  workspace.py  wrapper.py
src/dekk/agents/: __init__.py  app.py  constants.py  discovery.py  generators.py  installer.py  scaffold.py
src/dekk/cli/: __init__.py  cli_commands.py  commands.py  config.py  errors.py  install_runner.py  main.py  output.py  progress.py  runner.py  styles.py  typer_app.py
src/dekk/core/: __init__.py  commands.py  config.py  context.py  paths.py  version.py
src/dekk/detection/: __init__.py  ci.py  compiler.py  conda.py  deps.py  detect.py  libpath.py  lockfile.py  scaffold.py  version_managers.py  workspace.py
src/dekk/diagnostics/: __init__.py  diagnostic.py  diagnostic_checks.py  (+2 more)
src/sniff/: __init__.py  build.py  cli_commands.py  compiler.py  context.py  diagnostic.py  diagnostic_checks.py  envspec.py  libpath.py  manifest.py  paths.py  runner.py  toolchain.py  typer_app.py  validate.py  wrapper.py
src/sniff_cli/: __init__.py  __main__.py  _compat.py  activation.py  build.py  cache.py  ci.py  cli_commands.py  commands.py  conda.py  config.py  context.py  deps.py  diagnostic.py  diagnostic_checks.py  envspec.py  install.py  libpath.py  lockfile.py  remediate.py  runner.py  sniff_os.py  test_runner.py  toolchain.py  typer_app.py  validate.py  validation_cache.py  version.py  workspace.py  wrapper.py
tests/: test_agents.py  test_build.py  test_cache.py  test_ci.py  test_ci_build.py  test_cli_commands.py  test_cli_main.py  test_cli_templates.py  test_commands.py  test_compiler.py  test_conda.py  test_config.py  test_context.py  test_dekk_os.py  test_deps.py  test_detect.py  test_diagnostic.py  test_env.py  test_environment_bootstrap.py  test_envspec_environment.py  test_install.py  test_libpath.py  test_lockfile.py  test_main_module.py  test_manifest.py  test_paths.py  test_project_runner.py  test_runner.py  test_scaffold.py  test_shell.py  test_skills.py  test_sniff_os.py  test_test_runner.py  test_toolchain.py  test_typer_app.py  test_validate.py  test_validation_cache.py  test_version.py  test_version_managers.py  test_workspace.py  (+3 more)
tests/cli/: conftest.py  test_config.py  test_context.py  test_errors.py  test_output.py  test_progress.py  test_runner.py  test_styles.py
(+78 files in other folders)
