[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dekk"
version = "1.6.4"
description = "Reusable environment detection, activation, and wrapper tooling for developer CLIs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "platformdirs>=4.9.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "PyYAML>=6.0",
    "questionary>=2.0.0",
]
authors = [
    { name = "Randres Herrera", email = "randres2011@gmail.com" },
]
maintainers = [
    { name = "Randres Herrera", email = "randres2011@gmail.com" },
]
keywords = [
    "cli",
    "developer-tools",
    "environment",
    "toolchain",
    "conda",
    "workspace",
    "detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/randreshg/dekk"
Documentation = "https://github.com/randreshg/dekk/tree/main/docs"
Repository = "https://github.com/randreshg/dekk"
Issues = "https://github.com/randreshg/dekk/issues"
Changelog = "https://github.com/randreshg/dekk/blob/main/CHANGELOG.md"

[project.scripts]
dekk = "dekk.cli.main:main"

[project.optional-dependencies]
tracking = [
    "tully>=0.1.0",
]
all = [
    "tully>=0.1.0",
]
dev = [
    "build>=1.2.1",
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.2",
    "types-psutil>=7.0.0.20260302",
    "types-PyYAML>=6.0.12.20250915",
    "twine>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dekk"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/examples",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/CONTRIBUTING.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
